Fixing Of Critical Spacing Issues in Vertical sm

--- a/Enlace-main/src/components/Vertical/vertical.module.css
+++ b/Enlace-main/src/components/Vertical/vertical.module.css
@@ -137,7 +137,7 @@
   }
   .page:nth-of-type(9) {
     background: url(https://res.cloudinary.com/roshin/image/upload/v1647279803/Assets_Enlace/M9_uqm10a.png);
-    height: 750px;
+    height: 950px;
     background-size: 100% 100%;
     position: relative;
   }
